# bootkit

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
bootkit/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  bootstrap.yaml
demos/01-basic/artifacts/: registry-seed.txt  rke2-images.txt
demos/02-single-node-k3s/: SCENARIO.md  bootstrap.yaml
demos/02-single-node-k3s/artifacts/: k3s-airgap-images.txt
demos/03-k3s-ha-quorum/: SCENARIO.md  bootstrap.yaml
demos/03-k3s-ha-quorum/artifacts/: k3s-images.txt  registry.txt
demos/04-preflight-fails/: SCENARIO.md  bootstrap.yaml
demos/05-generic-distro/: SCENARIO.md  bootstrap.yaml
demos/05-generic-distro/artifacts/: install-bundle.txt
demos/06-json-spec/: SCENARIO.md  bootstrap.json
demos/06-json-spec/artifacts/: registry-seed.txt  rke2-images.txt
demos/07-large-transfer/: SCENARIO.md  bootstrap.yaml
demos/07-large-transfer/artifacts/: registry.tar
demos/08-mcp-session/: SCENARIO.md  bootstrap.yaml  session.jsonl
demos/08-mcp-session/artifacts/: images.txt
demos/09-carry-bundle/: SCENARIO.md  bootstrap.yaml
demos/09-carry-bundle/artifacts/: images.txt  registry.txt
docs/: USAGE.md
examples/: help.txt  version.txt
tests/: test_bundle.py  test_connect.py  test_deep.py  test_features.py  test_smoke.py
