[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-bootkit"
version = "0.1.1"
description = "Air-gapped cluster bootstrap planner — seed disconnected k3s/RKE2-style clusters"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "airgap", "kubernetes", "bootstrap", "disconnected", "devsecops", "cli", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/bootkit"

[project.scripts]
"bootkit-emit" = "bootkit.connect:emit_main"
bootkit = "bootkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bootkit"]

[tool.hatch.metadata]
allow-direct-references = true
